samples/_failures_safe/1761708303_d84be8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33293989.c: In function ‘main’:
./samples/SAFE/__tmp_33293989.c:150:13: error: expected identifier at end of input
  150 |             printf("%-4d %-3d %-10s  %s\n", token.line, token.
      |             ^~~~~~
./samples/SAFE/__tmp_33293989.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_33293989.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_33293989.c:150:13: error: expected declaration or statement at end of input
